--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,9 @@
   <url>http://maven.apache.org</url>
   <dependencies>
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
+      <groupId>com.lucidworks.spark</groupId>
+      <artifactId>spark-solr</artifactId>
+      <version>3.5.9</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
