--- a/pom.xml
+++ b/pom.xml
@@ -8,16 +8,106 @@
   <name>my-app</name>
   <url>http://maven.apache.org</url>
   <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.1.2</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>com.arthurnn</groupId>
-      <artifactId>cafe</artifactId>
-      <version>1.0.0</version>
-    </dependency>
+    
+<dependency><groupId>junit</groupId><artifactId>junit</artifactId></dependency>
+<dependency><groupId>org.apache.maven.plugins</groupId><artifactId>maven-compiler-plugin</artifactId></dependency>
+<dependency><groupId>mysql</groupId><artifactId>mysql-connector-java</artifactId></dependency>
+<dependency><groupId>org.springframework.boot</groupId><artifactId>spring-boot-maven-plugin</artifactId></dependency>
+<dependency><groupId>org.springframework.boot</groupId><artifactId>spring-boot-starter-web</artifactId></dependency>
+<dependency><groupId>org.springframework.boot</groupId><artifactId>spring-boot-starter-test</artifactId></dependency>
+<dependency><groupId>org.springframework</groupId><artifactId>spring-webmvc</artifactId></dependency>
+<dependency><groupId>org.springframework</groupId><artifactId>spring-context</artifactId></dependency>
+<dependency><groupId>org.slf4j</groupId><artifactId>slf</artifactId></dependency>
+<dependency><groupId>log4j</groupId><artifactId>log</artifactId></dependency>
+<dependency><groupId>javax.servlet</groupId><artifactId>javax.servlet-api</artifactId></dependency>
+<dependency><groupId>org.springframework</groupId><artifactId>spring-core</artifactId></dependency>
+<dependency><groupId>org.springframework</groupId><artifactId>spring-web</artifactId></dependency>
+<dependency><groupId>org.apache.maven.plugins</groupId><artifactId>maven-surefire-plugin</artifactId></dependency>
+<dependency><groupId>org.slf4j</groupId><artifactId>slf</artifactId></dependency>
+<dependency><groupId>org.springframework</groupId><artifactId>spring-test</artifactId></dependency>
+<dependency><groupId>com.fasterxml.jackson.core</groupId><artifactId>jackson-databind</artifactId></dependency>
+<dependency><groupId>org.springframework.boot</groupId><artifactId>spring-boot-starter-data-jpa</artifactId></dependency>
+<dependency><groupId>org.springframework</groupId><artifactId>spring-jdbc</artifactId></dependency>
+<dependency><groupId>commons-io</groupId><artifactId>commons-io</artifactId></dependency>
+<dependency><groupId>javax.servlet</groupId><artifactId>jstl</artifactId></dependency>
+<dependency><groupId>javax.servlet</groupId><artifactId>servlet-api</artifactId></dependency>
+<dependency><groupId>org.apache.commons</groupId><artifactId>commons-lang</artifactId></dependency>
+<dependency><groupId>org.apache.maven.plugins</groupId><artifactId>maven-war-plugin</artifactId></dependency>
+<dependency><groupId>org.springframework</groupId><artifactId>spring-orm</artifactId></dependency>
+<dependency><groupId>org.springframework</groupId><artifactId>spring-tx</artifactId></dependency>
+<dependency><groupId>org.hibernate</groupId><artifactId>hibernate-core</artifactId></dependency>
+<dependency><groupId>org.springframework</groupId><artifactId>spring-context-support</artifactId></dependency>
+<dependency><groupId>commons-fileupload</groupId><artifactId>commons-fileupload</artifactId></dependency>
+<dependency><groupId>com.h2database</groupId><artifactId>h</artifactId></dependency>
+<dependency><groupId>org.apache.maven.plugins</groupId><artifactId>maven-jar-plugin</artifactId></dependency>
+<dependency><groupId>com.google.guava</groupId><artifactId>guava</artifactId></dependency>
+<dependency><groupId>com.google.code.gson</groupId><artifactId>gson</artifactId></dependency>
+<dependency><groupId>org.springframework</groupId><artifactId>spring-beans</artifactId></dependency>
+<dependency><groupId>org.hibernate</groupId><artifactId>hibernate-entitymanager</artifactId></dependency>
+<dependency><groupId>org.springframework.boot</groupId><artifactId>spring-boot-devtools</artifactId></dependency>
+<dependency><groupId>org.projectlombok</groupId><artifactId>lombok</artifactId></dependency>
+<dependency><groupId>org.hibernate</groupId><artifactId>hibernate-validator</artifactId></dependency>
+<dependency><groupId>org.mybatis</groupId><artifactId>mybatis</artifactId></dependency>
+<dependency><groupId>org.apache.maven.plugins</groupId><artifactId>maven-dependency-plugin</artifactId></dependency>
+<dependency><groupId>org.apache.httpcomponents</groupId><artifactId>httpclient</artifactId></dependency>
+<dependency><groupId>ch.qos.logback</groupId><artifactId>logback-classic</artifactId></dependency>
+<dependency><groupId>org.springframework.boot</groupId><artifactId>spring-boot-starter-thymeleaf</artifactId></dependency>
+<dependency><groupId>org.springframework</groupId><artifactId>spring-aop</artifactId></dependency>
+<dependency><groupId>org.mybatis</groupId><artifactId>mybatis-spring</artifactId></dependency>
+<dependency><groupId>com.fasterxml.jackson.core</groupId><artifactId>jackson-core</artifactId></dependency>
+<dependency><groupId>commons-codec</groupId><artifactId>commons-codec</artifactId></dependency>
+<dependency><groupId>org.apache.maven.plugins</groupId><artifactId>maven-javadoc-plugin</artifactId></dependency>
+<dependency><groupId>javax.servlet.jsp</groupId><artifactId>jsp-api</artifactId></dependency>
+<dependency><groupId>org.springframework.boot</groupId><artifactId>spring-boot-starter-actuator</artifactId></dependency>
+<dependency><groupId>org.slf4j</groupId><artifactId>jcl-over-slf</artifactId></dependency>
+<dependency><groupId>commons-lang</groupId><artifactId>commons-lang</artifactId></dependency>
+<dependency><groupId>commons-dbcp</groupId><artifactId>commons-dbcp</artifactId></dependency>
+<dependency><groupId>org.apache.maven.plugins</groupId><artifactId>maven-resources-plugin</artifactId></dependency>
+<dependency><groupId>org.apache.maven.plugins</groupId><artifactId>maven-source-plugin</artifactId></dependency>
+<dependency><groupId>com.alibaba</groupId><artifactId>fastjson</artifactId></dependency>
+<dependency><groupId>jstl</groupId><artifactId>jstl</artifactId></dependency>
+<dependency><groupId>org.aspectj</groupId><artifactId>aspectjweaver</artifactId></dependency>
+<dependency><groupId>org.codehaus.mojo</groupId><artifactId>exec-maven-plugin</artifactId></dependency>
+<dependency><groupId>commons-logging</groupId><artifactId>commons-logging</artifactId></dependency>
+<dependency><groupId>org.springframework.boot</groupId><artifactId>spring-boot-starter-security</artifactId></dependency>
+<dependency><groupId>org.testng</groupId><artifactId>testng</artifactId></dependency>
+<dependency><groupId>org.codehaus.jackson</groupId><artifactId>jackson-mapper-asl</artifactId></dependency>
+<dependency><groupId>org.aspectj</groupId><artifactId>aspectjrt</artifactId></dependency>
+<dependency><groupId>org.seleniumhq.selenium</groupId><artifactId>selenium-java</artifactId></dependency>
+<dependency><groupId>org.apache.maven.plugins</groupId><artifactId>maven-shade-plugin</artifactId></dependency>
+<dependency><groupId>org.mockito</groupId><artifactId>mockito-all</artifactId></dependency>
+<dependency><groupId>com.alibaba</groupId><artifactId>druid</artifactId></dependency>
+<dependency><groupId>com.fasterxml.jackson.core</groupId><artifactId>jackson-annotations</artifactId></dependency>
+<dependency><groupId>joda-time</groupId><artifactId>joda-time</artifactId></dependency>
+<dependency><groupId>org.springframework.security</groupId><artifactId>spring-security-config</artifactId></dependency>
+<dependency><groupId>org.springframework.security</groupId><artifactId>spring-security-web</artifactId></dependency>
+<dependency><groupId>javax.validation</groupId><artifactId>validation-api</artifactId></dependency>
+<dependency><groupId>org.apache.poi</groupId><artifactId>poi</artifactId></dependency>
+<dependency><groupId>org.json</groupId><artifactId>json</artifactId></dependency>
+<dependency><groupId>org.springframework.boot</groupId><artifactId>spring-boot-starter</artifactId></dependency>
+<dependency><groupId>org.postgresql</groupId><artifactId>postgresql</artifactId></dependency>
+<dependency><groupId>javax.inject</groupId><artifactId>javax.inject</artifactId></dependency>
+<dependency><groupId>commons-collections</groupId><artifactId>commons-collections</artifactId></dependency>
+<dependency><groupId>org.apache.tomcat.maven</groupId><artifactId>tomcat</artifactId></dependency>
+<dependency><groupId>org.apache.maven.plugins</groupId><artifactId>maven-assembly-plugin</artifactId></dependency>
+<dependency><groupId>org.springframework</groupId><artifactId>spring-aspects</artifactId></dependency>
+<dependency><groupId>redis.clients</groupId><artifactId>jedis</artifactId></dependency>
+<dependency><groupId>javax.mail</groupId><artifactId>mail</artifactId></dependency>
+<dependency><groupId>org.apache.poi</groupId><artifactId>poi-ooxml</artifactId></dependency>
+<dependency><groupId>org.mockito</groupId><artifactId>mockito-core</artifactId></dependency>
+<dependency><groupId>org.apache.maven.plugins</groupId><artifactId>maven-eclipse-plugin</artifactId></dependency>
+<dependency><groupId>org.assertj</groupId><artifactId>assertj-core</artifactId></dependency>
+<dependency><groupId>io.springfox</groupId><artifactId>springfox-swagger</artifactId></dependency>
+<dependency><groupId>org.springframework.boot</groupId><artifactId>spring-boot-starter-tomcat</artifactId></dependency>
+<dependency><groupId>commons-beanutils</groupId><artifactId>commons-beanutils</artifactId></dependency>
+<dependency><groupId>taglibs</groupId><artifactId>standard</artifactId></dependency>
+<dependency><groupId>org.springframework.cloud</groupId><artifactId>spring-cloud-dependencies</artifactId></dependency>
+<dependency><groupId>org.codehaus.mojo</groupId><artifactId>build-helper-maven-plugin</artifactId></dependency>
+<dependency><groupId>org.apache.logging.log4j</groupId><artifactId>log</artifactId></dependency>
+<dependency><groupId>cglib</groupId><artifactId>cglib</artifactId></dependency>
+<dependency><groupId>javax</groupId><artifactId>javaee-api</artifactId></dependency>
+<dependency><groupId>org.jacoco</groupId><artifactId>jacoco-maven-plugin</artifactId></dependency>
+<dependency><groupId>org.slf4j</groupId><artifactId>slf</artifactId></dependency>
+<dependency><groupId>org.apache.maven.plugins</groupId><artifactId>maven-release-plugin</artifactId></dependency>
   </dependencies>
 </project>
