--- a/pom.xml
+++ b/pom.xml
@@ -1,14 +1,3 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>com.mycompany.app</groupId>
-  <artifactId>my-app</artifactId>
-  <packaging>jar</packaging>
-  <version>1.0-SNAPSHOT</version>
-  <name>my-app</name>
-  <url>http://maven.apache.org</url>
-  <dependencies>
-    
 <dependency><groupId>junit</groupId><artifactId>junit</artifactId></dependency>
 <dependency><groupId>org.apache.maven.plugins</groupId><artifactId>maven-compiler-plugin</artifactId></dependency>
 <dependency><groupId>mysql</groupId><artifactId>mysql-connector-java</artifactId></dependency>
@@ -17,13 +6,13 @@
 <dependency><groupId>org.springframework.boot</groupId><artifactId>spring-boot-starter-test</artifactId></dependency>
 <dependency><groupId>org.springframework</groupId><artifactId>spring-webmvc</artifactId></dependency>
 <dependency><groupId>org.springframework</groupId><artifactId>spring-context</artifactId></dependency>
-<dependency><groupId>org.slf4j</groupId><artifactId>slf</artifactId></dependency>
-<dependency><groupId>log4j</groupId><artifactId>log</artifactId></dependency>
+<dependency><groupId>org.slf4j</groupId><artifactId>slf4j-api</artifactId></dependency>
+<dependency><groupId>log4j</groupId><artifactId>log4j</artifactId></dependency>
 <dependency><groupId>javax.servlet</groupId><artifactId>javax.servlet-api</artifactId></dependency>
 <dependency><groupId>org.springframework</groupId><artifactId>spring-core</artifactId></dependency>
 <dependency><groupId>org.springframework</groupId><artifactId>spring-web</artifactId></dependency>
 <dependency><groupId>org.apache.maven.plugins</groupId><artifactId>maven-surefire-plugin</artifactId></dependency>
-<dependency><groupId>org.slf4j</groupId><artifactId>slf</artifactId></dependency>
+<dependency><groupId>org.slf4j</groupId><artifactId>slf4j-log4j12</artifactId></dependency>
 <dependency><groupId>org.springframework</groupId><artifactId>spring-test</artifactId></dependency>
 <dependency><groupId>com.fasterxml.jackson.core</groupId><artifactId>jackson-databind</artifactId></dependency>
 <dependency><groupId>org.springframework.boot</groupId><artifactId>spring-boot-starter-data-jpa</artifactId></dependency>
@@ -31,14 +20,14 @@
 <dependency><groupId>commons-io</groupId><artifactId>commons-io</artifactId></dependency>
 <dependency><groupId>javax.servlet</groupId><artifactId>jstl</artifactId></dependency>
 <dependency><groupId>javax.servlet</groupId><artifactId>servlet-api</artifactId></dependency>
-<dependency><groupId>org.apache.commons</groupId><artifactId>commons-lang</artifactId></dependency>
+<dependency><groupId>org.apache.commons</groupId><artifactId>commons-lang3</artifactId></dependency>
 <dependency><groupId>org.apache.maven.plugins</groupId><artifactId>maven-war-plugin</artifactId></dependency>
 <dependency><groupId>org.springframework</groupId><artifactId>spring-orm</artifactId></dependency>
 <dependency><groupId>org.springframework</groupId><artifactId>spring-tx</artifactId></dependency>
 <dependency><groupId>org.hibernate</groupId><artifactId>hibernate-core</artifactId></dependency>
 <dependency><groupId>org.springframework</groupId><artifactId>spring-context-support</artifactId></dependency>
 <dependency><groupId>commons-fileupload</groupId><artifactId>commons-fileupload</artifactId></dependency>
-<dependency><groupId>com.h2database</groupId><artifactId>h</artifactId></dependency>
+<dependency><groupId>com.h2database</groupId><artifactId>h2</artifactId></dependency>
 <dependency><groupId>org.apache.maven.plugins</groupId><artifactId>maven-jar-plugin</artifactId></dependency>
 <dependency><groupId>com.google.guava</groupId><artifactId>guava</artifactId></dependency>
 <dependency><groupId>com.google.code.gson</groupId><artifactId>gson</artifactId></dependency>
@@ -59,7 +48,7 @@
 <dependency><groupId>org.apache.maven.plugins</groupId><artifactId>maven-javadoc-plugin</artifactId></dependency>
 <dependency><groupId>javax.servlet.jsp</groupId><artifactId>jsp-api</artifactId></dependency>
 <dependency><groupId>org.springframework.boot</groupId><artifactId>spring-boot-starter-actuator</artifactId></dependency>
-<dependency><groupId>org.slf4j</groupId><artifactId>jcl-over-slf</artifactId></dependency>
+<dependency><groupId>org.slf4j</groupId><artifactId>jcl-over-slf4j</artifactId></dependency>
 <dependency><groupId>commons-lang</groupId><artifactId>commons-lang</artifactId></dependency>
 <dependency><groupId>commons-dbcp</groupId><artifactId>commons-dbcp</artifactId></dependency>
 <dependency><groupId>org.apache.maven.plugins</groupId><artifactId>maven-resources-plugin</artifactId></dependency>
@@ -88,7 +77,7 @@
 <dependency><groupId>org.postgresql</groupId><artifactId>postgresql</artifactId></dependency>
 <dependency><groupId>javax.inject</groupId><artifactId>javax.inject</artifactId></dependency>
 <dependency><groupId>commons-collections</groupId><artifactId>commons-collections</artifactId></dependency>
-<dependency><groupId>org.apache.tomcat.maven</groupId><artifactId>tomcat</artifactId></dependency>
+<dependency><groupId>org.apache.tomcat.maven</groupId><artifactId>tomcat7-maven-plugin</artifactId></dependency>
 <dependency><groupId>org.apache.maven.plugins</groupId><artifactId>maven-assembly-plugin</artifactId></dependency>
 <dependency><groupId>org.springframework</groupId><artifactId>spring-aspects</artifactId></dependency>
 <dependency><groupId>redis.clients</groupId><artifactId>jedis</artifactId></dependency>
@@ -97,17 +86,15 @@
 <dependency><groupId>org.mockito</groupId><artifactId>mockito-core</artifactId></dependency>
 <dependency><groupId>org.apache.maven.plugins</groupId><artifactId>maven-eclipse-plugin</artifactId></dependency>
 <dependency><groupId>org.assertj</groupId><artifactId>assertj-core</artifactId></dependency>
-<dependency><groupId>io.springfox</groupId><artifactId>springfox-swagger</artifactId></dependency>
+<dependency><groupId>io.springfox</groupId><artifactId>springfox-swagger2</artifactId></dependency>
 <dependency><groupId>org.springframework.boot</groupId><artifactId>spring-boot-starter-tomcat</artifactId></dependency>
 <dependency><groupId>commons-beanutils</groupId><artifactId>commons-beanutils</artifactId></dependency>
 <dependency><groupId>taglibs</groupId><artifactId>standard</artifactId></dependency>
 <dependency><groupId>org.springframework.cloud</groupId><artifactId>spring-cloud-dependencies</artifactId></dependency>
 <dependency><groupId>org.codehaus.mojo</groupId><artifactId>build-helper-maven-plugin</artifactId></dependency>
-<dependency><groupId>org.apache.logging.log4j</groupId><artifactId>log</artifactId></dependency>
+<dependency><groupId>org.apache.logging.log4j</groupId><artifactId>log4j-core</artifactId></dependency>
 <dependency><groupId>cglib</groupId><artifactId>cglib</artifactId></dependency>
 <dependency><groupId>javax</groupId><artifactId>javaee-api</artifactId></dependency>
 <dependency><groupId>org.jacoco</groupId><artifactId>jacoco-maven-plugin</artifactId></dependency>
-<dependency><groupId>org.slf4j</groupId><artifactId>slf</artifactId></dependency>
+<dependency><groupId>org.slf4j</groupId><artifactId>slf4j-simple</artifactId></dependency>
 <dependency><groupId>org.apache.maven.plugins</groupId><artifactId>maven-release-plugin</artifactId></dependency>
-  </dependencies>
-</project>
