--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,14 @@
-<dependency><groupId>junit</groupId><artifactId>junit</artifactId></dependency>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+  <modelVersion>4.0.0</modelVersion>
+  <groupId>com.mycompany.app</groupId>
+  <artifactId>my-app</artifactId>
+  <packaging>jar</packaging>
+  <version>1.0-SNAPSHOT</version>
+  <name>my-app</name>
+  <url>http://maven.apache.org</url>
+  <dependencies>
+    <dependency><groupId>junit</groupId><artifactId>junit</artifactId></dependency>
 <dependency><groupId>org.apache.maven.plugins</groupId><artifactId>maven-compiler-plugin</artifactId></dependency>
 <dependency><groupId>mysql</groupId><artifactId>mysql-connector-java</artifactId></dependency>
 <dependency><groupId>org.springframework.boot</groupId><artifactId>spring-boot-maven-plugin</artifactId></dependency>
@@ -98,3 +108,6 @@
 <dependency><groupId>org.jacoco</groupId><artifactId>jacoco-maven-plugin</artifactId></dependency>
 <dependency><groupId>org.slf4j</groupId><artifactId>slf4j-simple</artifactId></dependency>
 <dependency><groupId>org.apache.maven.plugins</groupId><artifactId>maven-release-plugin</artifactId></dependency>
+
+  </dependencies>
+</project>
